@@ -1,8 +1,10 @@
+#notarget: cris*-*-linux-gnu
 #as: --em=criself --march=v32
 #ld: -m criself --oformat binary --defsym ext1=0x4000 --defsym ext2=0x6000
 #objdump: -s -b binary
 
 # Test that pcrel relocs work with --oformat binary.
+# Source code and "-m criself" doesn't work with *-linux-gnu.
 
 .*:     file format binary
 
