@@ -1,3 +1,4 @@
+# notarget: cris*-*-linux-gnu
 # source: start1.s --march=v0_v10
 # source: move-1.s --march=v32
 # as: --em=criself
@@ -6,3 +7,4 @@
 
 # Test that linking a v32 object to a (classic) v10 object does
 # not work.
+# Source code and "-m criself" doesn't work with *-linux-gnu.
