@@ -1,3 +1,8 @@
+2005-09-01  Hans-Peter Nilsson  <hp@axis.com>
+
+	* ld-cris: Skip tests unsuitable for testing target
+	cris-axis-linux-gnu.
+
 2005-08-18  David Daney  <ddaney@avtrex.com>
 
 	* ld-mips-elf/multi-got-1.d: Adjust for new ld behavior.
